fix landing height on iOS

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -35,7 +35,7 @@ body {
 
 .landingcont {
     height:100%;
-    margin-top: 10vh;
+    margin-top: 10%;
 }
 
 @media only screen and (max-width: 320px) {
